CSS tweak to fix overlap between gallery media list and pagination. [bug 612738]

--- a/media/css/gallery.css
+++ b/media/css/gallery.css
@@ -119,7 +119,7 @@ a.btn-upload {
 }
 
 #media-list {
-    margin: 20px 0 -40px 0;
+    margin: 20px 0;
 }
 
 #media-list li {
